--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,15 +27,14 @@
             <div class="footer">
               <div class="contact">
                 <p>
-                  Your Name<br />
-                  What You Are<br />
-                  your@email.com
+                  Matías García Isaía<br />
+                  mgarciaisaia@gmail.com
                 </p>
               </div>
               <div class="contact">
                 <p>
-                  <a href="http://github.com/yourusername/">github.com/yourusername</a><br />
-                  <a href="http://twitter.com/yourusername/">twitter.com/yourusername</a><br />
+                  <a href="http://github.com/mgarciaisaia/">github.com/mgarciaisaia</a><br />
+                  <a href="http://github.com/sisoputnfrba/">github.com/sisoputnfrba</a><br />
                 </p>
               </div>
             </div>
